[gd_scene load_steps=50 format=3 uid="uid://d3lrhikt6x65w"]

[ext_resource type="Script" uid="uid://bkkmvkjsslkah" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://daaytws2lu7pn" path="res://assets/Knight 2D Pixel Art/Sprites/with_outline/ATTACK 1.png" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://bwlh8igcexo4n" path="res://assets/Knight 2D Pixel Art/Sprites/without_outline/DEFEND.png" id="3_ur7pv"]
[ext_resource type="Texture2D" uid="uid://dygtsjd7fhyi0" path="res://assets/Knight 2D Pixel Art/Sprites/with_outline/IDLE.png" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://gygfolqrywqm" path="res://assets/Knight 2D Pixel Art/Sprites/without_outline/HURT.png" id="4_tuyoq"]
[ext_resource type="Texture2D" uid="uid://dppotervtg1fc" path="res://assets/Knight 2D Pixel Art/Sprites/with_outline/WALK.png" id="5_smehm"]
[ext_resource type="Texture2D" uid="uid://dpkup6xr0mgg0" path="res://assets/sprites/JUMP.png" id="6_fjrip"]
[ext_resource type="AudioStream" uid="uid://b7bm0cjqh63yo" path="res://assets/Super Dialogue Audio Pack v1/Step 2 - Audio Files/5 - Refusal/Male/Ian Lampert/refusal_4_ian.wav" id="9_d2wvv"]
[ext_resource type="AudioStream" uid="uid://b3bkhyjbyuxtb" path="res://Sounds/SFX/Attack sound/sword-slashing-game-sound-effect-2-379229.mp3" id="9_y4r1p"]
[ext_resource type="AudioStream" uid="uid://brc0jlqmc34o6" path="res://Sounds/SFX/jumping sound/video-game-jump-soundeffect-37532.mp3" id="10_y4r1p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_qlg0r")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_qlg0r")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_qlg0r")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_qlg0r")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_qlg0r")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_ur7pv")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("3_ur7pv")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_ur7pv")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_ur7pv")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_ur7pv")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_ur7pv")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("4_tuyoq")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("4_tuyoq")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("4_tuyoq")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("4_tuyoq")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("4_fjrip")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("4_fjrip")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("4_fjrip")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("4_fjrip")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("4_fjrip")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("4_fjrip")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("4_fjrip")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("6_fjrip")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("6_fjrip")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("6_fjrip")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("6_fjrip")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("6_fjrip")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("5_smehm")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("5_smehm")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("5_smehm")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("5_smehm")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("5_smehm")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("5_smehm")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("5_smehm")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("5_smehm")
region = Rect2(672, 0, 96, 84)

[sub_resource type="SpriteFrames" id="SpriteFrames_onrkg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}],
"loop": true,
"name": &"block",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tuyoq"]
radius = 8.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fjrip"]
radius = 16.0
height = 32.0

[node name="player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.74999976, -16.000002)
scale = Vector2(0.8072917, 0.78571427)
sprite_frames = SubResource("SpriteFrames_onrkg")
animation = &"jump"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -14)
shape = SubResource("CapsuleShape2D_tuyoq")

[node name="AttackArea" type="Area2D" parent="." groups=["player_attack"]]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-1, -14)
shape = SubResource("CapsuleShape2D_fjrip")

[node name="blockhit_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_d2wvv")
bus = &"SFX"

[node name="jumping_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_y4r1p")
volume_db = -22.802
bus = &"SFX"

[node name="attacking_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_y4r1p")
volume_db = -19.558
bus = &"SFX"
